packages/kyvernoPolicies/chart/tests/vpol/disallow-image-tags-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-image-tags-cel
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-image-tags-cel
  resources:
  - badpod-no-tag
  - badpod-latest-tag
  - badpod-latest-init
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-image-tags-cel
  resources:
  - baddeployment-latest
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-image-tags-cel
  resources:
  - goodpod-versioned
  - goodpod-multiple
  result: pass
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-image-tags-cel
  resources:
  - gooddeployment-versioned
  result: pass
